feat: initialize project architecture including core user, blog, community, and AI services alongside a React-based frontend.